--- a/marginpadding.html
+++ b/marginpadding.html
@@ -19,7 +19,7 @@
         background-color: chocolate;
       }
       .wrapper {
-        background-color: crimson;
+        background-color: black;
       }
     </style>
   </head>
