--- a/block.html
+++ b/block.html
@@ -6,10 +6,9 @@
     <title>Document</title>
     <style>
       div {
-        height: 200px;
-        width: 300px;
-        padding: 10px;
-        border: 10px solid green;
+        height: 100px;
+        padding: 15px;
+        border: 5px solid black;
         margin: 10px;
       }
     </style>
