--- a/javascript/second.html
+++ b/javascript/second.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="second.js"></script>
+    <!-- <script src="second.js"></script> -->
+    <script src="practice.js"></script>
   </body>
 </html>
